force-app/main/default/objects/DHS_PPF_Shipping_Information__c/DHS_PPF_Shipping_Information__c.object-meta.xml
<CustomObject>
    <label>PPF Shipping Information</label>
    <nameField>
        <displayFormat>PPFShipping-{00000}</displayFormat>
        <label>PPF Shipping Information Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PPF Shipping Informations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>