force-app/main/default/objects/DHS_PPF_Shipping_Information__c/fields/Briefing_Scoping_Notes_Received__c.field-meta.xml
<CustomField>
    <fullName>Briefing_Scoping_Notes_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Briefing/Scoping Notes Received</label>
    <type>Checkbox</type>
</CustomField>