force-app/main/default/objects/DHS_PPF_Shipping_Information__c/fields/Case_Messages_Received__c.field-meta.xml
<CustomField>
    <fullName>Case_Messages_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Messages Received</label>
    <type>Checkbox</type>
</CustomField>