force-app/main/default/objects/DHS_PPF_Shipping_Information__c/fields/Credit_Report_Received__c.field-meta.xml
<CustomField>
    <fullName>Credit_Report_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Report Received</label>
    <type>Checkbox</type>
</CustomField>