force-app/main/default/objects/DHS_PPF_Shipping_Information__c/fields/Date_of_Manifest_Ship__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Manifest_Ship__c</fullName>
    <label>Date of Manifest Ship</label>
    <type>Date</type>
</CustomField>