force-app/main/default/objects/DHS_PPF_Shipping_Information__c/fields/Date_Received_at_ISN__c.field-meta.xml
<CustomField>
    <fullName>Date_Received_at_ISN__c</fullName>
    <label>Date Received at ISN</label>
    <type>Date</type>
</CustomField>