force-app/main/default/objects/DHS_PPF_Shipping_Information__c/fields/DHS_Case__c.field-meta.xml
<CustomField>
    <fullName>DHS_Case__c</fullName>
    <label>Case</label>
    <referenceTo>DHS_Case__c</referenceTo>
    <relationshipLabel>PPF Shipping Informations</relationshipLabel>
    <relationshipName>DHS_PPF_Shipping_Informations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>