force-app/main/default/objects/DHS_PPF_Shipping_Information__c/fields/DHS_Investigator__c.field-meta.xml
<CustomField>
    <fullName>DHS_Investigator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investigator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DHS_PPF_Shipping_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>