force-app/main/default/objects/DHS_PPF_Shipping_Information__c/fields/DHS_QA_User__c.field-meta.xml
<CustomField>
    <fullName>DHS_QA_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QA User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DHS_PPF_Shipping_Informations_QA</relationshipName>
    <type>Lookup</type>
</CustomField>