force-app/main/default/objects/DHS_PPF_Shipping_Information__c/fields/Hardcopy_Records_Received__c.field-meta.xml
<CustomField>
    <fullName>Hardcopy_Records_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hardcopy Records Received</label>
    <type>Checkbox</type>
</CustomField>