force-app/main/default/objects/DHS_PPF_Shipping_Information__c/fields/ISN_HQ_Recipient_Confirms__c.field-meta.xml
<CustomField>
    <fullName>ISN_HQ_Recipient_Confirms__c</fullName>
    <label>ISN HQ Recipient Confirms</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Case Papers</fullName>
            </value>
            <value>
                <fullName>Releases</fullName>
            </value>
            <value>
                <fullName>Handwritten Case Notes</fullName>
            </value>
            <value>
                <fullName>Case Messages</fullName>
            </value>
            <value>
                <fullName>Briefing/Scoping Notes</fullName>
            </value>
            <value>
                <fullName>Hardcopy Records</fullName>
            </value>
            <value>
                <fullName>Credit Report</fullName>
            </value>
            <value>
                <fullName>Resume</fullName>
            </value>
            <value>
                <fullName>OF-306</fullName>
            </value>
            <value>
                <fullName>Attachments (provided by subject)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>