force-app/main/default/objects/DHS_PPF_Shipping_Information__c/fields/Manifest_Number__c.field-meta.xml
<CustomField>
    <fullName>Manifest_Number__c</fullName>
    <label>Manifest Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>