force-app/main/default/objects/DHS_PPF_Shipping_Information__c/fields/OF_306_Received__c.field-meta.xml
<CustomField>
    <fullName>OF_306_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OF-306 Received</label>
    <type>Checkbox</type>
</CustomField>