force-app/main/default/objects/DHS_PPF_Shipping_Information__c/fields/QA_Comments__c.field-meta.xml
<CustomField>
    <fullName>QA_Comments__c</fullName>
    <label>QA Comments</label>
    <type>TextArea</type>
</CustomField>