force-app/main/default/objects/DHS_PPF_Shipping_Information__c/fields/Recipients_Cred_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Recipients_Cred_ID_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Recipients Cred/ID Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>