force-app/main/default/objects/DHS_PPF_Shipping_Information__c/fields/Recipients_Name__c.field-meta.xml
<CustomField>
    <fullName>Recipients_Name__c</fullName>
    <label>Recipients Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>