force-app/main/default/objects/DHS_PPF_Shipping_Information__c/fields/Resume_Received__c.field-meta.xml
<CustomField>
    <fullName>Resume_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resume Received</label>
    <type>Checkbox</type>
</CustomField>