force-app/main/default/objects/DHS_PPF_Shipping_Information__c/fields/Shipping_Staff_Cred_ID_Num__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Staff_Cred_ID_Num__c</fullName>
    <label>Shipping Staff Credential/ID Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>