force-app/main/default/objects/DHS_PPF_Shipping_Information__c/fields/Shipping_Staff_Name__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Staff_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Shipping Staff Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>