force-app/main/default/objects/DHS_PPF_Shipping_Information__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Investigator Posted</fullName>
            </value>
            <value>
                <fullName>ISN Reviewed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>